# No-False-Negatives

./: .gitignore  CMakeLists.txt  README.md
include/: database.hpp
include/common/: chunk_allocator.hpp  chunk_cas_allocator.hpp  csv_writer.hpp  details_collector.hpp  epoch_manager.hpp  global_logger.hpp  mutex_wait_manager.hpp  no_wait_manager.hpp  optimistic_predicate_locking.hpp  shared_spin_mutex.hpp  std_allocator.hpp  thread_handler.hpp
include/ds/: atomic_array_vector.hpp  atomic_data_structures_decl.hpp  atomic_extent_vector.hpp  atomic_singly_linked_list.hpp  atomic_unordered_hashtable.hpp  atomic_unordered_map.hpp  atomic_unordered_multimap.hpp  atomic_unordered_set.hpp  extent_vector.hpp
include/mvcc/benchmarks/: column_store_smallbank.hpp  column_store_tatp.hpp  column_store_tpcc.hpp  column_store_ycsb.hpp  read_guard.hpp  write_guard.hpp
include/mvcc/cc/mvocc/: transaction_coordinator.hpp  transaction_information.hpp  validator.hpp
include/mvcc/cc/nofalsenegatives/: serialization_graph.hpp  transaction_coordinator.hpp  transaction_information.hpp
include/svcc/benchmarks/: column_store_smallbank.hpp  column_store_tatp.hpp  column_store_tpcc.hpp  column_store_ycsb.hpp  read_guard.hpp
include/svcc/cc/2pl/: lock_manager.hpp  transaction_coordinator.hpp  transaction_information.hpp
include/svcc/cc/2pl_table/: lock_manager.hpp  transaction_coordinator.hpp  transaction_information.hpp
include/svcc/cc/locked/: serialization_graph.hpp  transaction_coordinator.hpp  transaction_information.hpp
include/svcc/cc/nofalsenegatives/: serialization_graph.hpp  transaction_coordinator.hpp  transaction_information.hpp
include/svcc/cc/step/: serialization_graph.hpp  step_manager.hpp  transaction_coordinator.hpp  transaction_information.hpp
include/svcc/cc/tictoc/: transaction_coordinator.hpp  transaction_information.hpp  validator.hpp
src/: database.cpp  local.cmake
src/common/: chunk_allocator.cpp  chunk_cas_allocator.cpp  epoch_manager.cpp  optimistic_predicate_locking.cpp
src/mvcc/cc/mvocc/: transaction_coordinator.cpp
src/mvcc/cc/nofalsenegatives/: serialization_graph.cpp  transaction_coordinator.cpp
src/svcc/cc/2pl/: transaction_coordinator.cpp
src/svcc/cc/2pl_table/: transaction_coordinator.cpp
src/svcc/cc/locked/: serialization_graph.cpp  (+1 more)
test/: atomic_extent_vector_test.cpp  chunk_allocator_structures_test.cpp  gtest.cpp  gtest.hpp  local.cmake  mock_thread.hpp
(+7 files in other folders)
